--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "js-md5": "^0.7.3",
     "node-schedule": "^2.1.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
