--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,8 +4,8 @@
 name: reply-action
 
 on:
-  schedule:
-    - cron: '0 5 * * *' # 定时运行的时间，国际标准时间，北京时间要+8
+  # schedule:
+  #   - cron: '0 5 * * *' # 定时运行的时间，国际标准时间，北京时间要+8
   workflow_dispatch:
 
 jobs:
@@ -18,8 +18,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '14.x'
+          cache: 'npm'
       #安装依赖 执行
-      - name: Install Dependency
+      - name: Install Dependency & Run
         env:
           TOKEN: ${{ secrets.TOKEN }}
           AUTHOR: ${{ secrets.AUTHOR }}
