feat: 遍历后匹配

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "action": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
