--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timing-reply",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "三国杀社区定时回复",
   "private": true,
   "main": "index.js",
@@ -9,7 +9,7 @@
     "action": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ll",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
